--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@ body {
     margin: 0;
 }
 
+.header-main{
+    color: #FF6B6B;
+}
+
 .container {
     width: 100%;
-    max-width: 500px;
+    max-width: 400px;
     align-items: center;
     flex-direction: column;
 }
@@ -34,7 +38,7 @@ body {
     cursor: pointer;
     overflow: hidden;
     transition: max-height 0.3s ease, padding 0.3s ease, border-color 0.3s ease;
-    max-height: 60px; 
+    max-height: 24px; 
     padding: 20px; 
     width: 300px;
     border: 2px solid transparent;
@@ -52,6 +56,10 @@ body {
     margin: 0;
 }
 
+.card .content{
+    margin-top: 26px;
+}
+
 .offer {
     border-radius: 5px;
     padding: 10px;
@@ -61,33 +69,124 @@ body {
 
 .offer-tag {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    display: block;
+    top: -22px;
+    left: -24px;
     background-color: #FF6B6B;
     color: white;
-    padding: 5px;
+    justify-items: center;
+    padding: 16px;
+    height: 33px;
     border-radius: 5px;
-    font-size: 12px;
+    font-size: 15px;
+    border: 2px dashed white; 
+    
+}
+
+.card.expanded .offer-tag {
+    display: none;
 }
 
 .offer-label {
     display: flex;
     align-items: center;
     cursor: pointer;
-    margin-left: 66px;
+    margin-left: 58px;
     margin-top: -33px;
 }
+
+.offer-label input[type="radio"] {
+    appearance: none; 
+    background-color: #fff;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    margin-right: 10px; 
+}
+
+
+.offer-label input[type="radio"]:checked {
+    border-color: #FF6B6B;
+    background-color: #fff;
+}
+
+.offer-label input[type="radio"]:checked::after {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #FF6B6B;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 .offer-content {
     margin-left: 18px;
 }
 
 .offer-title {
-    font-weight: bold;
+    font-size: 14px;
 }
 
 .offer-price {
+    font-size: 14px;
     color: #333;
+    margin-top: -12px;
+    font-weight: 700;
+}
+
+.offer-content .badge{
+    display: none;
+}
+
+.offer-content .muted-price{
+    display: none;
+}
+
+.card.expanded .badge {
+    display: inline;
+}
+
+.card.expanded .muted-price{
+    display: inline;
+}
+
+
+.badge {
+    background-color: #FF6B6B;
+    color: white;
+    padding: 3px 7px;
+    border-radius: 3px;
+    font-size: 10px;
+    margin-left: 8px;
+}
+
+.power-price{
+    color: #d3d3d3;
+    font-size: 14px;
+}
+
+.text-pumper{
+    color: #FF6B6B;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+
+.muted-price {
+    color: #d3d3d3; 
+    text-decoration: line-through;
+    text-decoration-thickness: 1px; 
+    margin-left: 8px;
+    font-size: 10px;
 }
 
 .discounted-price {
@@ -97,14 +196,14 @@ body {
 }
 
 .most-popular {
-    background-color: #FF6B6B;
-    color: white;
+    color: #FF6B6B;
     padding: 2px 5px;
     border-radius: 5px;
-    font-size: 10px;
+    font-size: 12px;
+    font-weight: 800;
     position: absolute;
-    top: 17px;
-    right: 0px;
+    top: 4px;
+    right: -15px;
 }
 
 .selection {
@@ -140,4 +239,133 @@ body {
     border-radius: 5px;
     cursor: pointer;
     width: 344px;
+    margin-top: 13px;
+}
+
+
+.select-label {
+    font-size: 14px;
+    margin-bottom: 10px;
+    margin-left: 38px;
+}
+
+
+.select-container {
+    display: flex;
+    gap: 7px; 
+    align-items: center;
+    margin-top: 6px;
+}
+
+.select-input::after{
+    border: 3px solid transparent;
+    border-color: #000 transparent transparent transparent;
+}
+
+.select-input {
+    padding: 8px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    width: 80px;
+}
+
+.select-input:focus {
+    border-color: #FF6B6B;
+    outline: none;
+}
+
+
+.select-container label {
+    margin-right: 10px;
+    font-size: 14px;
+}
+
+.side-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: -8px;
+    padding: 10px 0;
+}
+
+.side-text {
+    font-size: 14px;
+    font-weight: bold;
+    color:#FF6B6B;
+}
+
+.side-total {
+    font-size: 14px;
+    font-weight: 600;
+    color: #333;
+    margin-left: 109px;
+}
+
+
+@media screen and (min-width: 320px) and (max-width:380px){
+    .container{
+        max-width: 301px;
+    }
+    .card{
+        width: 230px;
+    }
+
+    .button .add-button{
+        width: 275px;
+    }
+
+    .side-text{
+        font-size: 10px;
+    }
+
+    .side-total{
+        font-size: 10px;
+    }
+
+    .most-popular{
+        font-size: 9px;
+        top: -3px;
+    }
+
+    .offer-title{
+        font-size: 9px;
+    }
+
+    .offer-price{
+        font-size: 9px;
+        margin-top: 7px;
+    }
+
+    .badge{
+        font-size: 9px;
+    }
+
+    .offer-content .muted-price{
+        font-size: 8px;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (min-width: 380px) and (max-width:440px){
+    .container{
+        max-width: 352px;
+    }
+    .card{
+        width: 263px;
+    }
+
+    .button .add-button{
+        width: 305px;
+    }
+
+    .side-text{
+        font-size: 13px;
+    }
+    .side-total{
+        font-size: 13px;
+    }
+    .most-popular{
+        font-size: 11px;
+    }
 }
